--- a/ayaz_webpage.html
+++ b/ayaz_webpage.html
@@ -3,8 +3,12 @@
 
     </head>
     <body>
-        <header>
+        <header class="page-header">
             <h1>Ayaz Webpage</h1>
         </header>
+        <div class="body-div">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </div>
+        <button class="page-button">Press here</button>
     </body>
 <!DOCTYPE html>
