--- a/ayaz_webpage.html
+++ b/ayaz_webpage.html
@@ -4,10 +4,20 @@
     </head>
     <body>
         <header class="page-header">
+            <img src="images/ayaz_pfp.png" class="pfp_image">
             <h1>Ayaz Webpage</h1>
         </header>
-        <div class="body-div">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <div class="location">
+            Location: Croydon
+        </div>
+        <div class="hobbies">
+            Hobbies: Bouldering, watching sports
+        </div>
+        <div class="fun-fact">
+            Fun fact: Im currently watching dexter for the first time
+        </div>
+        <div class="phobias">
+            Phobias: heights but looking up at tall buildings
         </div>
         <button class="page-button">Press here</button>
     </body>
