EDIT: added divs to reanna.html

--- a/reanna.HTML
+++ b/reanna.HTML
@@ -7,10 +7,13 @@
 </head>
 <body>
     <h1>Reanna's info</h1>
-    <p>Location: Portsmouth</p>
-    <p>Hobbies: Reading, Hiking</p>
-    <p>Fun fact: Came through Women in Tech programme</p>
-    <p>Phobias: Spiders, Snakes</p>
-    <img src="images/Spider2.png" alt="cartoon image of spider">
+    
+    <div>
+        <p>Location: Portsmouth</p>
+        <p>Hobbies: Reading, Hiking</p>
+        <p>Fun fact: Came through Women in Tech programme</p>
+        <p>Phobias: Spiders, Snakes</p>
+        <img src="images/Spider2.png" alt="cartoon image of spider">
+    </div>
 </body>
 </html>
