--- a/harry_webpage.html
+++ b/harry_webpage.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
     <head>
-
+        Harry
     </head>
     <body>
         <header class="page-header">
+            <img src="images/harry_pfp.png" class="pfp_image">
             <h1>Harry Webpage</h1>
         </header>
-        <div class="body-div">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <div class="location">
+            Location: Leeds
         </div>
-        <button class="page-button">Press here</button>
+        <div class="hobbies">
+            Hobbies: Cooking, Walking, Audiobooks
+        </div>
+        <div class="fun-fact">
+            Fun fact: I'm currently applying to be on pointless
+        </div>
+        <div class="phobias">
+            Phobias: heights and deep water
+        </div>
     </body>
 <!DOCTYPE html>
