--- a/joravar.HTML
+++ b/joravar.HTML
@@ -7,10 +7,12 @@
 </head>
 <body>
     <h1>Joravar's info</h1>
+    <div>
     <p>Location: West London</p>
     <p>Hobbies: Golf, Football, Hiking</p>
     <p>Fun fact: Born on leap year</p>
     <p>Phobias: Snakes</p>
+    </div>
     <img src="images/snake.jpg" alt="cartoon snake">
 </body>
 </html>
