--- a/TaranAndAdnan.html
+++ b/TaranAndAdnan.html
@@ -27,6 +27,14 @@
         </section>
         <section>
             <h2>
+                Fun fact
+            </h2>
+            <p> 
+                I support Chelsea!
+            </p>
+        </section>
+        <section>
+            <h2>
                 Phobias
             </h2>
             <p> 
