--- a/Adnan.html
+++ b/Adnan.html
@@ -25,6 +25,14 @@
                 Football
             </p>
         </section>
+               <section>
+            <h2>
+                Fun fact
+            </h2>
+            <p> 
+                I support Manchester!
+            </p>
+        </section>
         <section>
             <h2>
                 Phobias
