--- a/harry_webpage.html
+++ b/harry_webpage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+    <link src="stylesheet" href="style.css">
     <body>
         <header class="page-header">
             <img src="images/harry_pfp.png" class="pfp_image">
