--- a/ayaz_webpage.html
+++ b/ayaz_webpage.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-    <body>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body >
         <header class="page-header">
             <img src="images/ayaz_pfp.png" class="pfp_image">
-            <h1>Ayaz Webpage</h1>
+            <h1 class="header-text">Ayaz's Webpage</h1>
         </header>
-        <div class="location">
-            Location: Croydon
-        </div>
-        <div class="hobbies">
-            Hobbies: Bouldering, watching sports
-        </div>
-        <div class="fun-fact">
-            Fun fact: Im currently watching dexter for the first time
-        </div>
-        <div class="phobias">
-            Phobias: heights but looking up at tall buildings
+        <div class="info-list">
+            <div class="location">
+                <span>Location:</span> Croydon
+            </div>
+            <div class="hobbies">
+                <span>Hobbies:</span>
+                <ul>
+                    <li>Bouldering</li>
+                    <li>Watching sports</li>
+                </ul>
+            </div>
+            <div class="fun-fact">
+                Fun fact: Im currently watching dexter for the first time
+            </div>
+            <div class="phobias">
+                Phobias: heights but looking up at tall buildings
+            </div>
         </div>
         <button class="page-button">Press here</button>
     </body>
