--- a/harry_webpage.html
+++ b/harry_webpage.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-    <link src="stylesheet" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <header class="page-header">
             <img src="images/harry_pfp.png" class="pfp_image">
