--- a/Adnan.html
+++ b/Adnan.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Adnan's Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
