added basic styling

--- a/reanna.HTML
+++ b/reanna.HTML
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Reanna's info</h1>
+    <h1 class="header">Reanna's info</h1>
     <div>
+
+    <div class = "location">
     <p>Location: Portsmouth</p>
+    </div>
+
+    <div class = "hobbies">
     <p>Hobbies: Reading, Hiking</p>
+    </div>
+
+    <div class = "fact">
     <p>Fun fact: Came through Women in Tech programme</p>
+    </div>
+
+    <div class = "phobias">
     <p>Phobias: Spiders, Snakes</p>
+    </div>
+
     </div>
     <img src="images/Spider2.png" alt="cartoon image of spider">
 
