--- a/harry_webpage.html
+++ b/harry_webpage.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header class="page-header">
-            <img src="images/harry_pfp.png" class="pfp_image">
-            <h1>Harry Webpage</h1>
-        </header>
-        <div class="location">
-            Location: Leeds
-        </div>
-        <div class="hobbies">
-            Hobbies: Cooking, Walking, Audiobooks
-        </div>
-        <div class="fun-fact">
-            Fun fact: I'm currently applying to be on pointless
-        </div>
-        <div class="phobias">
-            Phobias: heights and deep water
-        </div>
-    </body>
+    <html lang="en">  
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Harry's Webpage</title>
+            <link rel="stylesheet" href="style.css">
+        </head>
+        <body>
+            <header class="page-header">
+                <img src="images/harry_pfp.png" class="pfp_image">
+                <h1>Harry Webpage</h1>
+            </header>
+            <div class="location">
+                Location: Leeds
+            </div>
+            <div class="hobbies">
+                Hobbies: Cooking, Walking, Audiobooks
+            </div>
+            <div class="fun-fact">
+                Fun fact: I'm currently applying to be on pointless
+            </div>
+            <div class="phobias">
+                Phobias: heights and deep water
+            </div>
+        </body>
+    </html>
 <!DOCTYPE html>
