--- a/ayaz_webpage.html
+++ b/ayaz_webpage.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body >
-        <header class="page-header">
-            <img src="images/ayaz_pfp.png" class="pfp_image">
-            <h1 class="header-text">Ayaz's Webpage</h1>
-        </header>
-        <div class="info-list">
-            <div class="location">
-                <span>Location:</span> Croydon
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Ayaz's Webpage</title>
+            <link rel="stylesheet" href="style.css">
+        </head>
+        <body >
+            <header class="page-header">
+                <img src="images/ayaz_pfp.png" class="pfp_image">
+                <h1 class="header-text">Ayaz's Webpage</h1>
+            </header>
+            <div class="info-list">
+                <div class="location">
+                    <span>Location:</span> Croydon
+                </div>
+                <div class="hobbies">
+                    <span>Hobbies:</span>
+                    <ul>
+                        <li>Bouldering</li>
+                        <li>Watching sports</li>
+                    </ul>
+                </div>
+                <div class="fun-fact">
+                    Fun fact: Im currently watching dexter for the first time
+                </div>
+                <div class="phobias">
+                    Phobias: heights but looking up at tall buildings
+                </div>
             </div>
-            <div class="hobbies">
-                <span>Hobbies:</span>
-                <ul>
-                    <li>Bouldering</li>
-                    <li>Watching sports</li>
-                </ul>
-            </div>
-            <div class="fun-fact">
-                Fun fact: Im currently watching dexter for the first time
-            </div>
-            <div class="phobias">
-                Phobias: heights but looking up at tall buildings
-            </div>
-        </div>
-        <button class="page-button">Press here</button>
-    </body>
+            <button class="page-button">Press here</button>
+        </body>
+    </html>
 <!DOCTYPE html>
